# embedded-Json-Cpp

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
data/: CMakeLists.txt
pokus/: a.out  data.txt  main.cpp
src/: CMakeLists.txt  lib.cpp
